# ai-live-voice-translator

./: .gitignore  Makefile  docker-compose.yml
backend/: .env.example  debug_deepgram.py  debug_deepgram_async.py  debug_deepgram_async_2.py  debug_deepgram_connect.py  debug_deepgram_init.py  debug_deepgram_listen.py  debug_deepgram_listen_2.py  debug_deepgram_listen_3.py  debug_deepgram_search.py  debug_deepgram_send.py  debug_deepgram_test_init.py  pyproject.toml  requirements-ai.txt  requirements.txt  seed_data.py  test_ws.py
backend/alembic/: env.py
backend/alembic/versions/: 24cc1b82bf85_initial_migration.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: api.py  deps.py
backend/app/api/v1/: agents.py  auth.py  meetings.py  notifications.py  recall.py  training.py  users.py  websocket.py  ws.py
backend/app/core/: config.py  enforcement.py  security.py
backend/app/db/: 02_agent_system_harden.sql  03_update_match_documents.sql  agents_schema.sql  compliance_schema.sql  cost_schema.sql  supabase.py
backend/app/db/migrations/: 001_add_voice_description.sql  002_fix_rls_policies.sql  20240122_add_external_url_to_meetings.sql  20240122_add_preview_url.sql  20240122_fix_meeting_costs_rls.sql
backend/app/services/: compliance_service.py  finops_service.py  notification_service.py  websocket_manager.py
backend/chrome_data/Default/: Cookies  DIPS
backend/chrome_data/agent_1f74e652-5349-4439-8b96-62a82ef65105/: DevToolsActivePort
backend/chrome_data/agent_30777b6f-6685-4be1-a171-e702fd0ba7b8/: DevToolsActivePort  Local State
(+643 files in other folders)
