[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ai-backend"
version = "0.1.0"
description = "Enterprise Real-time Voice Translation API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "redis>=5.0.3",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "sentry-sdk>=1.40.0",
    "structlog>=24.1.0",
    "python-jose[cryptography]>=3.3.0",
    "numpy>=1.26.0",
    "email-validator>=2.1.0",
    "aiohttp>=3.9.0",
    "deepl>=1.16.0",
    "deepgram-sdk>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0"
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
